<resources>
    <string name="app_name">آموزشگاه خوارزمی</string>
    <string name="app_subtitle">سیستم مدیریت آموزشی</string>
    <string name="action_save">ذخیره</string>
    <string name="action_cancel">انصراف</string>
    <string name="action_delete">حذف</string>
    <string name="action_edit">ویرایش</string>
    <string name="action_add">افزودن</string>
    <string name="action_search">جستجو</string>
    <string name="action_filter">فیلتر</string>
    <string name="action_refresh">بارگذاری مجدد</string>
    <string name="action_confirm">تایید</string>
    <string name="action_back">بازگشت</string>
    <string name="action_next">بعدی</string>
    <string name="action_finish">اتمام</string>
    <string name="login_title">ورود به سیستم</string>
    <string name="login_mobile_hint">شماره موبایل</string>
    <string name="login_password_hint">رمز عبور</string>
    <string name="login_button">ورود به سیستم</string>
    <string name="login_teacher_register">معلم هستید؟ ثبت نام کنید</string>
    <string name="login_password_optional">(اختیاری برای معلمان)</string>
    <string name="login_error_invalid_credentials">شماره موبایل یا رمز عبور نادرست است</string>
    <string name="login_error_network">خطا در اتصال به سرور</string>
    <string name="login_loading">در حال ورود...</string>
    <string name="dashboard_welcome">خوش آمدید</string>
    <string name="dashboard_admin">پنل مدیریت</string>
    <string name="dashboard_teacher">پنل معلم</string>
    <string name="dashboard_student">پنل دانش‌آموز</string>
    <string name="nav_home">خانه</string>
    <string name="nav_classes">کلاس‌ها</string>
    <string name="nav_students">دانش‌آموزان</string>
    <string name="nav_teachers">معلمان</string>
    <string name="nav_finance">مالی</string>
    <string name="nav_reports">گزارش‌ها</string>
    <string name="nav_settings">تنظیمات</string>
    <string name="nav_logout">خروج</string>
    <string name="classes_title">مدیریت کلاس‌ها</string>
    <string name="classes_add">ایجاد کلاس جدید</string>
    <string name="classes_active">کلاس فعال</string>
    <string name="classes_suspended">تعلیق شده</string>
    <string name="classes_pending">در انتظار تایید</string>
    <string name="classes_total">کل کلاس‌ها</string>
    <string name="classes_students">دانش‌آموز</string>
    <string name="classes_teachers">معلم</string>
    <string name="classes_no_classes">کلاسی یافت نشد</string>
    <string name="classes_create_first">اولین کلاس خود را ایجاد کنید</string>
    <string name="class_title">عنوان کلاس</string>
    <string name="class_code">کد کلاس</string>
    <string name="class_teacher">مدرس</string>
    <string name="class_grade_level">پایه تحصیلی</string>
    <string name="class_gender">جنسیت</string>
    <string name="class_sessions">تعداد جلسات</string>
    <string name="class_status">وضعیت</string>
    <string name="class_students_list">لیست دانش‌آموزان</string>
    <string name="class_financial_status">وضعیت مالی</string>
    <string name="class_total_debt">کل بدهی</string>
    <string name="class_teacher_debt">بدهی معلم</string>
    <string name="class_institute_debt">بدهی آموزشگاه</string>
    <string name="students_title">مدیریت دانش‌آموزان</string>
    <string name="students_add">ثبت دانش‌آموز جدید</string>
    <string name="students_total">کل دانش‌آموزان</string>
    <string name="students_active">فعال</string>
    <string name="students_suspended">تعلیق شده</string>
    <string name="students_no_students">دانش‌آموزی یافت نشد</string>
    <string name="student_full_name">نام و نام خانوادگی</string>
    <string name="student_mobile">شماره موبایل</string>
    <string name="student_national_code">کد ملی</string>
    <string name="student_parent_mobile">موبایل والدین</string>
    <string name="student_address">آدرس</string>
    <string name="student_notes">یادداشت‌ها</string>
    <string name="teachers_title">مدیریت معلمان</string>
    <string name="teachers_add">ثبت معلم جدید</string>
    <string name="teachers_total">کل معلمان</string>
    <string name="teachers_active">فعال</string>
    <string name="teachers_pending">در انتظار تایید</string>
    <string name="teachers_suspended">تعلیق شده</string>
    <string name="teachers_no_teachers">معلمی یافت نشد</string>
    <string name="teacher_full_name">نام و نام خانوادگی</string>
    <string name="teacher_mobile">شماره موبایل</string>
    <string name="teacher_national_code">کد ملی</string>
    <string name="teacher_expertise">تخصص</string>
    <string name="teacher_experience">سابقه تدریس</string>
    <string name="teacher_education">تحصیلات</string>
    <string name="finance_title">مدیریت مالی</string>
    <string name="finance_total_income">کل درآمد</string>
    <string name="finance_total_debt">کل بدهی</string>
    <string name="finance_teacher_share">سهم معلم</string>
    <string name="finance_institute_share">سهم آموزشگاه</string>
    <string name="finance_pending_payments">پرداخت‌های معوق</string>
    <string name="finance_recent_transactions">تراکنش‌های اخیر</string>
    <string name="finance_add_transaction">ثبت تراکنش جدید</string>
    <string name="reports_title">گزارش‌ها</string>
    <string name="reports_attendance">گزارش حضور و غیاب</string>
    <string name="reports_grades">گزارش نمرات</string>
    <string name="reports_financial">گزارش مالی</string>
    <string name="reports_debtors">گزارش بدهکاران</string>
    <string name="reports_generate">تهیه گزارش</string>
    <string name="reports_export">خروجی Excel</string>
    <string name="reports_print">چاپ</string>
    <string name="attendance_title">حضور و غیاب</string>
    <string name="attendance_present">حاضر</string>
    <string name="attendance_absent">غایب</string>
    <string name="attendance_excused">معذور</string>
    <string name="attendance_late">تأخیر</string>
    <string name="attendance_submit">ثبت حضور و غیاب</string>
    <string name="attendance_date">تاریخ جلسه</string>
    <string name="attendance_session">جلسه شماره</string>
    <string name="attendance_total_present">کل حاضرین</string>
    <string name="attendance_total_absent">کل غایبین</string>
    <string name="grades_title">نمرات</string>
    <string name="grades_submit">ثبت نمره</string>
    <string name="grades_student">دانش‌آموز</string>
    <string name="grades_score">نمره</string>
    <string name="grades_max_score">حداکثر نمره</string>
    <string name="grades_description">توضیحات</string>
    <string name="grades_average">میانگین</string>
    <string name="grades_highest">بالاترین</string>
    <string name="grades_lowest">پایین‌ترین</string>
    <string name="settings_title">تنظیمات</string>
    <string name="settings_server_ip">آدرس سرور</string>
    <string name="settings_change_password">تغییر رمز عبور</string>
    <string name="settings_notifications">اعلان‌ها</string>
    <string name="settings_about">درباره برنامه</string>
    <string name="settings_version">نسخه</string>
    <string name="settings_logout">خروج از حساب کاربری</string>
    <string name="message_success">عملیات با موفقیت انجام شد</string>
    <string name="message_error">خطا در انجام عملیات</string>
    <string name="message_warning">هشدار</string>
    <string name="message_info">اطلاعات</string>
    <string name="message_confirm_delete">آیا از حذف این آیتم اطمینان دارید؟</string>
    <string name="message_confirm_logout">آیا می‌خواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="message_no_internet">اتصال اینترنت برقرار نیست</string>
    <string name="message_loading">در حال بارگذاری...</string>
    <string name="message_saving">در حال ذخیره...</string>
    <string name="message_searching">در حال جستجو...</string>
    <string name="empty_title">موردی یافت نشد</string>
    <string name="empty_message">در حال حاضر هیچ آیتمی در این بخش وجود ندارد.</string>
    <string name="empty_action">ایجاد جدید</string>
    <string name="empty_search">نتیجه‌ای برای جستجوی شما یافت نشد</string>
    <string name="error_required">این فیلد اجباری است</string>
    <string name="error_invalid_mobile">شماره موبایل نامعتبر است</string>
    <string name="error_invalid_national_code">کد ملی نامعتبر است</string>
    <string name="error_network">خطا در ارتباط با سرور</string>
    <string name="error_server">خطای سرور</string>
    <string name="error_unknown">خطای ناشناخته</string>
    <string name="status_active">فعال</string>
    <string name="status_suspended">تعلیق شده</string>
    <string name="status_pending">در انتظار تایید</string>
    <string name="status_completed">تکمیل شده</string>
    <string name="status_cancelled">لغو شده</string>
    <string name="month_farvardin">فروردین</string>
    <string name="month_ordibehesht">اردیبهشت</string>
    <string name="month_khordad">خرداد</string>
    <string name="month_tir">تیر</string>
    <string name="month_mordad">مرداد</string>
    <string name="month_shahrivar">شهریور</string>
    <string name="month_mehr">مهر</string>
    <string name="month_aban">آبان</string>
    <string name="month_azar">آذر</string>
    <string name="month_dey">دی</string>
    <string name="month_bahman">بهمن</string>
    <string name="month_esfand">اسفند</string>
    <string name="day_saturday">شنبه</string>
    <string name="day_sunday">یکشنبه</string>
    <string name="day_monday">دوشنبه</string>
    <string name="day_tuesday">سه‌شنبه</string>
    <string name="day_wednesday">چهارشنبه</string>
    <string name="day_thursday">پنجشنبه</string>
    <string name="day_friday">جمعه</string>
    <string name="gender_male">پسر</string>
    <string name="gender_female">دختر</string>
    <string name="gender_both">هر دو</string>
    <string name="grade_seventh">پایه هفتم</string>
    <string name="grade_eighth">پایه هشتم</string>
    <string name="grade_ninth">پایه نهم</string>
    <string name="grade_tenth">پایه دهم</string>
    <string name="grade_eleventh">پایه یازدهم</string>
    <string name="grade_twelfth">پایه دوازدهم</string>
    <string name="grade_pre_university">پیش دانشگاهی</string>
    <string name="grade_konkoor">کنکور</string>
    <string name="btn_ok">تایید</string>
    <string name="btn_cancel">انصراف</string>
    <string name="btn_yes">بله</string>
    <string name="btn_no">خیر</string>
    <string name="btn_retry">تلاش مجدد</string>
    <string name="btn_dismiss">بستن</string>
    <string name="btn_more">بیشتر</string>
    <string name="btn_less">کمتر</string>
    <string name="placeholder_search">جستجو...</string>
    <string name="placeholder_select">انتخاب کنید...</string>
    <string name="audit_trail_title">تاریخچه تغییرات مالی</string>
    <string name="audit_trail_filter_title">فیلترها</string>
    <string name="audit_trail_entity_id_hint">شناسه رکورد مالی (اختیاری)</string>
    <string name="audit_trail_date_from">از تاریخ</string>
    <string name="audit_trail_date_to">تا تاریخ</string>
    <string name="audit_trail_refresh">بروزرسانی</string>
    <string name="audit_trail_clear_filters">پاک‌کردن فیلترها</string>
    <string name="audit_trail_back">بازگشت</string>
    <string name="audit_trail_load_more">بارگذاری بیشتر</string>
    <string name="audit_trail_empty">هیچ تغییری با این فیلترها ثبت نشده است</string>
    <string name="audit_trail_summary_empty">—</string>
    <string name="audit_trail_export">خروجی CSV</string>
    <string name="audit_trail_search_hint">جست‌وجوی نام دانش‌آموز / معلم / کلاس / شعبه</string>
    <string name="arch_title">آرشیو کلاس‌های حذف‌شده</string>
    <string name="arch_back">‹ بازگشت</string>
    <string name="arch_loading">در حال دریافت…</string>
    <string name="arch_filter_title">جست‌وجو در آرشیو</string>
    <string name="arch_hint_title">نام کلاس</string>
    <string name="arch_hint_teacher">نام معلم</string>
    <string name="arch_hint_code">کد کلاس</string>
    <string name="arch_date_from">از تاریخ حذف</string>
    <string name="arch_date_to">تا تاریخ حذف</string>
    <string name="arch_clear">پاک کردن فیلترها</string>
    <string name="arch_empty">کلاسی با این فیلترها در آرشیو پیدا نشد.</string>
</resources>